# ai-hackaton-be

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: a23f1dffc9d8_init.py
src/be/: logger_config.py  loguru_handler.py  main.py
src/be/ai/: openai_assistant.py
src/be/ai/models/: openai.py
src/be/db/: database.py  dependencies.py  models.py
src/be/models/: requests.py  responses.py
src/be/routers/: articles.py  data_generator.py  openai.py
tests/: test.http  test_api.py
